# urfu-python-advanced

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  pull-request.yaml
tests/: test_m3t1_greeting.py  test_m3t2_decrypt.py  test_m3t2_expenses.py  test_m3t4_person.py  test_m4t3_registration.py  test_m5t2_runcode.py  test_m5t3_block_errors.py
urfu-python-advanced/module1/: main.py
urfu-python-advanced/module2/: get_mean_size.py  main.py  output_file.txt
urfu_python_advanced/module1/: war-and-peace.txt
urfu_python_advanced/module10/: report.md  task3.py  task4.py  task5.py
urfu_python_advanced/module11/: task.db  task1.py  task2.py  task3.py
urfu_python_advanced/module12/: task.db  task1.py  task3.py
urfu_python_advanced/module13/: generate_hw_database.py  task1.py  task2.py  task3.py  task4.py  task5.py  task7.py  wrong_fees.csv
urfu_python_advanced/module19/: task1.sql  task2.sql  task3.sql  task4.sql  task6.sql
urfu_python_advanced/module2/: decrypt.py  task1.py
urfu_python_advanced/module20/: hw.db  task.py
urfu_python_advanced/module22/: Dockerfile  nginx.conf  requirements.txt  uwsgi.ini
urfu_python_advanced/module22/src/: routes.py
urfu_python_advanced/module3/task1/: main.py
urfu_python_advanced/module4/: main.py  task4&5.py
urfu_python_advanced/module5/: task1.py  task2.py  task3.py  task4.py
urfu_python_advanced/module6/: stderr.txt  task1.py  task2.py  task3.py  task4.py  task6.py  task8.py
urfu_python_advanced/module7/: app.py  logging_config.py  logging_tree.txt  task3.py  utils.py
(+4 files in other folders)
