[tool.poetry]
name = "urfu_python_advanced"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "urfu_python_advanced" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
freezegun = "^1.2.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
