[tool.poetry]
name = "urfu_python_advanced"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "urfu_python_advanced" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
freezegun = "^1.2.2"
wtforms = "^3.0.1"
flask-wtf = "^1.1.1"
email-validator = "^1.3.1"
logging-tree = "^1.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
